Остался вопрос по MP3
Вебпак не видит MP3

--- a/00-webpack-start/src/index.scss
+++ b/00-webpack-start/src/index.scss
@@ -5,7 +5,7 @@
     padding-top: 100px;
     width: 100vw;
     height: 100vh;
-    background: url('/assets/summer-bg.jpg'), no-repeat center top / cover;
+    background: url('../assets/summer-bg.jpg'), no-repeat center top / cover;
 }
 
 .season {
@@ -16,15 +16,15 @@
 }
 
 .summer {
-    background: url('/assets/summer-bg.jpg') no-repeat center top / cover;
+    background: url('../assets/summer-bg.jpg') no-repeat center top / cover;
 }
 
 .rain {
-    background: url('/assets/rainy-bg.jpg') no-repeat center top / cover;
+    background: url('../assets/rainy-bg.jpg') no-repeat center top / cover;
 }
 
 .winter {
-    background: url('/assets/winter-bg.jpg') no-repeat center top / cover;
+    background: url('../assets/winter-bg.jpg') no-repeat center top / cover;
 }
 
 h1 {
