--- a/00-webpack-start/src/index.scss
+++ b/00-webpack-start/src/index.scss
@@ -19,6 +19,14 @@ html, body{
     border-radius: 30px;
     border: 3px solid #ccc;
     background:  no-repeat center top / cover;
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+
+    &__icon{
+        max-width: 100%;
+        max-height: 100%;
+    }
 }
 
 h1 {
@@ -28,11 +36,11 @@ h1 {
 }
 
 .seasons {
-    width: 50%;
-    margin: 0 auto;
+    max-width: 100%;
+    justify-content: center;
     display: flex;
-    justify-content: space-between;
     padding: 50px 0 50px;
+    column-gap: 30px;
 }
 
 .volume {
